--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
-    "babel-preset-react-app": "^9.1.2"
+    "babel-preset-react-app": "^9.1.2",
+    "eslint": "^7.4.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
